--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,10 @@ name = "vigil_reporter"
 
 [dependencies]
 log = "0.4"
+serde = "1.0"
+serde_derive = "1.0"
+sys-info = "0.5"
+reqwest = "0.8"
 
 [dev-dependencies]
 env_logger = "0.5"
