--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "vigil-reporter"
-version = "1.1.0"
+version = "1.1.1"
 description = "Vigil Reporter for Node. Used in pair with Vigil, the Microservices Status Page."
 readme = "README.md"
 license = "MIT"
+edition = "2018"
 homepage = "https://github.com/valeriansaliou/rs-vigil-reporter"
 repository = "https://github.com/valeriansaliou/rs-vigil-reporter.git"
 keywords = ["vigil", "microservices", "monitoring", "integration"]
