--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "vigil-reporter"
 version = "1.1.1"
-description = "Vigil Reporter for Node. Used in pair with Vigil, the Microservices Status Page."
+description = "Vigil Reporter for Rust. Used in pair with Vigil, the Microservices Status Page."
 readme = "README.md"
 license = "MIT"
 edition = "2018"
