--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,12 @@ name = "vigil_reporter"
 
 [dependencies]
 log = "0.4"
-serde = "1.0"
+serde = { version = "1.0", default-features = false }
 serde_derive = "1.0"
-sys-info = "0.7"
-reqwest = { version = "0.10", features = ["native-tls-vendored", "gzip", "blocking", "json"], default-features = false }
+serde_json = "1.0"
+sys-info = "0.9"
+base64 = "0.21"
+http_req = { version = "0.9", features = ["rust-tls"], default-features = false }
 
 [dev-dependencies]
-env_logger = "0.5"
+env_logger = "0.10"
